# agentic-component-factory

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  Dockerfile.worker  PRD.md  README.md  entrypoint.sh  entrypoint_worker.sh  pyproject.toml  run_server.py  run_worker.py
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PRD.md  README.md
infra/: main.tf  outputs.tf  variables.tf
presentations/: AgenticComponentFactory-TomasKubica.pptx  AgenticComponentFactorySummary.md
src/mcp_api_mock_gen/: codegen.py  config.py  contracts.py  schema.py  server.py  state.py  worker.py
src/mcp_api_mock_gen/skills/: acr.py  az_helpers.py  container_apps.py  cosmos.py  scripts.py
tests/: test_client.py  test_remote.http  test_remote.py
try/dashboard/: package-lock.json
try/dashboard/src/: App.css  App.jsx  index.css
